# dicom-pipe

./: .arcconfig  .gitattributes  .gitignore  .hgignore  Cargo.toml  NOTICE  readme.md
cli/: Cargo.toml
cli/src/: main.rs
dcmpipe_archiver/: Cargo.toml  readme.md
dcmpipe_archiver/src/: args.rs  main.rs
dcmpipe_cli/: Cargo.toml  readme.md  startmongo.bat  startmongo.sh
dcmpipe_cli/src/: args.rs  main.rs  threadpool.rs
dcmpipe_cli/src/app/: archiveapp.rs  args.rs  browseapp.rs  cursiveapp.rs  editapp.rs  fullobjapp.rs  imageapp.rs  indexapp.rs  lowmemapp.rs  mod.rs  printapp.rs  scanapp.rs  scpapp.rs  scuapp.rs  tuiapp.rs
dcmpipe_cli/src/app/scpapp/: cecho.rs  cfind.rs  cget.rs  cmove.rs  cstore.rs
dcmpipe_dict/: Cargo.toml  readme.md
dcmpipe_dict/src/: defnwrite.rs  lib.rs  xmlparser.rs
dcmpipe_dict/src/dict/: dicom_elements.rs  dir_structure_elements.rs  file_meta_elements.rs  lookup.rs  mod.rs  stdlookup.rs  tags.rs  transfer_syntaxes.rs  uids.rs
dcmpipe_dict/src/tests/: tests.rs
dcmpipe_dict_builder/: Cargo.toml  readme.md
dcmpipe_dict_builder/src/: defnwrite.rs  lib.rs  xmlparser.rs
dcmpipe_lib/: Cargo.toml  readme.md
dcmpipe_lib/src/: lib.rs
dcmpipe_lib/src/core/: charset.rs  constants.rs  dcmdataset.rs  dcmelement.rs  dcmobject.rs  dcmparser.rs  dcmparser_util.rs  dcmreader.rs  dcmsqelem.rs  dcmvalcache.rs  inspect.rs  mod.rs  pixdata.rs  tag.rs  tagpath.rs  tagstop.rs  tests.rs  ts.rs  uid.rs  values.rs  vr.rs
dcmpipe_lib/src/core/defn/: constants.rs  dcmdict.rs  mod.rs  tag.rs  ts.rs  uid.rs  vl.rs  vm.rs  vr.rs
dcmpipe_lib/src/core/dict/: dicom_elements.rs  dir_structure_elements.rs  file_meta_elements.rs  lookup.rs
dcmpipe_lib/src/core/parser/: builder.rs  dataset.rs  error.rs  iter.rs  mod.rs  parser.rs  util.rs
dcmpipe_lib/src/core/pixeldata/: mod.rs  pdbuf.rs  pdinfo.rs  pdslice.rs  pixel_i16.rs  pixel_i32.rs  pixel_i8.rs  pixel_u16.rs  pixel_u32.rs  pixel_u8.rs
dcmpipe_lib/src/core/read/: behavior.rs  builder.rs  ds.rs  error.rs  iter.rs  mod.rs  parser.rs  stop.rs  util.rs  valdecode.rs
dcmpipe_lib/src/core/read/parser/: detect.rs  dsread.rs  elem.rs  fme.rs  iter.rs  util.rs
dcmpipe_lib/src/core/tests/: mock.rs  tests.rs
dcmpipe_lib/src/core/write/: builder.rs  ds.rs  error.rs  mod.rs  valencode.rs  writer.rs
dcmpipe_lib/src/defn/: constants.rs  dcmdict.rs  mod.rs  tag.rs  ts.rs  uid.rs  vl.rs  vm.rs  vr.rs
dcmpipe_lib/src/dict/: dicom_elements.rs  dir_structure_elements.rs  file_meta_elements.rs  lookup.rs  mod.rs  stdlookup.rs  tags.rs  transfer_syntaxes.rs  uids.rs
dcmpipe_lib/src/dimse/: assoc.rs  commands.rs  constants.rs  error.rs  mod.rs  parser.rs  pduiter.rs  pdus.rs  svcops.rs  userops.rs
dcmpipe_lib/src/dimse/assoc/: scp.rs  scu.rs
dcmpipe_lib/src/dimse/commands/: messages.rs  tests.rs
dcmpipe_lib/src/dimse/pdus/: mainpdus.rs  pduiter.rs  userpdus.rs
dcmpipe_lib/src/read/: dcmparser.rs  dcmreader.rs  mock.rs  mod.rs  tests.rs
dcmpipe_lib/src/tests/: tests.rs
dcmpipe_lib/tests/: charsets.rs  dict.rs  parsing.rs  writing.rs
dcmpipe_lib/tests/common/: mock.rs  mockdata.rs  mod.rs
dcmpipe_tests/: Cargo.toml  readme.md
dcmpipe_tests/src/: charsets.rs  lib.rs  mock.rs  mockdata.rs  parsing.rs  tests.rs  writing.rs
dict/: Cargo.toml
dict/src/: defnwrite.rs  lib.rs  xmlparser.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/core/: dcmdataset.rs  dcmelement.rs  dcmobject.rs  mod.rs  tag.rs  tests.rs  ts.rs  vr.rs
lib/src/core/dict/: dicom_elements.rs  dir_structure_elements.rs  file_meta_elements.rs  lookup.rs  transfer_syntaxes.rs  uids.rs
lib/src/read/: dcmdataset.rs  dcmelement.rs  dcmiterator.rs  dcmparser.rs  dcmstream.rs  mock.rs  mod.rs  tagstop.rs  tests.rs
medicom/: Cargo.toml  readme.md
medicom/src/: lib.rs
medicom/src/core/: charset.rs  dcmelement.rs  dcmobject.rs  dcmsqelem.rs  inspect.rs  mod.rs  values.rs
medicom/src/core/defn/: constants.rs  dcmdict.rs  mod.rs  tag.rs  ts.rs  uid.rs  vm.rs  vr.rs
medicom/src/core/pixeldata/: mod.rs  pdinfo.rs  pdslice.rs  pdwinlevel.rs  pixel_i16.rs  pixel_i32.rs  pixel_i8.rs  pixel_u16.rs  pixel_u32.rs  pixel_u8.rs
medicom/src/core/read/: behavior.rs  builder.rs  ds.rs  error.rs  mod.rs  parser.rs  stop.rs  valdecode.rs
medicom/src/core/read/parser/: detect.rs  dsread.rs  elem.rs  fme.rs  iter.rs  util.rs
medicom/src/core/write/: builder.rs  ds.rs  error.rs  mod.rs  valencode.rs  writer.rs
medicom/src/dict/: lookup.rs  mod.rs  stdlookup.rs  tags.rs  transfer_syntaxes.rs  uids.rs
medicom/src/dimse/: assoc.rs  commands.rs  error.rs  mod.rs  pdus.rs  svcops.rs  userops.rs
medicom/src/dimse/assoc/: scp.rs  scu.rs
medicom/src/dimse/commands/: messages.rs  tests.rs
medicom/src/dimse/pdus/: mainpdus.rs  pduiter.rs  userpdus.rs
medicom/tests/: charsets.rs  dict.rs  parsing.rs  writing.rs
medicom/tests/common/: mock.rs  mockdata.rs  mod.rs
medicom_dict/: Cargo.toml  readme.md
medicom_dict/src/: lib.rs  xmlparser.rs
medicom_tools/: Cargo.toml  readme.md  startmongo.bat  startmongo.sh
medicom_tools/src/: args.rs  main.rs  threadpool.rs
medicom_tools/src/app/: archiveapp.rs  browseapp.rs  imageapp.rs  indexapp.rs  mod.rs  printapp.rs  scpapp.rs  scuapp.rs
medicom_tools/src/app/scpapp/: cecho.rs  cfind.rs  cget.rs  cmove.rs  cstore.rs
src/: lib.rs  main.rs
src/core/: dicom_elements.rs  dir_structure_elements.rs  file_meta_elements.rs  lookup.rs  mod.rs  tag.rs  tests.rs  ts.rs  uid.rs  uids.rs  vl.rs  vm.rs  vr.rs
src/core/dict/: dicom_elements.rs  dir_structure_elements.rs  file_meta_elements.rs  lookup.rs  mod.rs  tag_lookup.rs  transfer_syntaxes.rs  ts_lookup.rs  uid_lookup.rs  uids.rs
src/read/: dcmdataset.rs  dcmelement.rs  dcmitem.rs  dcmstream.rs  dcmstream_file.rs  elementcontainer.rs  mock.rs  mod.rs  tagstop.rs  tests.rs
src/util/: bytes.rs  mod.rs  tags.rs  transfersyntax.rs  uids.rs  vr.rs
src/write/: mod.rs
