[package]
name = "dcmpipe_archiver"
version = "0.1.0"
authors = ["neandrake <die.drachen@gmail.com>"]
edition = "2018"

[dependencies]
bson = "0.14"
dcmpipe_dict = { path = "../dcmpipe_dict", version = "0.1" }
dcmpipe_lib = { path = "../dcmpipe_lib", version = "0.1" }
mongodb = "0.9"
structopt = "0.3"
walkdir = "2.3"
