[package]
name = "dcmpipe_cli"
version = "0.1.0"
authors = ["neandrake <die.drachen@gmail.com>"]
edition = "2021"

[features]
index = ["dep:mongodb", "dep:bson"]
default = ["index"]

[dependencies]
anyhow = "1.0"
bson = { version = "2.10", optional = true }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
dcmpipe_lib = { path = "../dcmpipe_lib", version = "0.1", features = ["compress", "dimse", "stddicom"] }
mongodb = { version = "2.8", default-features = false, features = ["sync"], optional = true }
ratatui = "0.26"
walkdir = "2.5"

