[package]
name = "dcmpipe_cli"
version = "0.1.0"
authors = ["Christopher Speck <die.drachen@gmail.com>"]
edition = "2021"

[features]
index = ["dep:mongodb", "dep:bson"]
default = ["index"]

[dependencies]
anyhow = "1.0"
bson = { version = "2.13", optional = true }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dcmpipe_lib = { path = "../dcmpipe_lib", version = "0.1", features = ["compress", "dimse", "stddicom"] }
image = "0.25"
mongodb = { version = "3.1", default-features = false, features = ["dns-resolver", "sync", "rustls-tls", "compat-3-0-0"], optional = true }
ratatui = "0.29"
walkdir = "2.5"

