[package]
name = "dcmpipe_dict"
version = "0.1.0"
authors = ["neandrake <die.drachen@gmail.com>"]
build = "build/build.rs"
edition = "2018"

[dependencies]
dcmpipe_lib = { path = "../dcmpipe_lib", version = "0.1" }
phf = "0.7"

[build-dependencies]
dcmpipe_dict_builder = { path = "../dcmpipe_dict_builder", version = "0.1" }

[lib]
name="dcmpipe_dict"
path="src/lib.rs"