[package]
name = "dcmpipe_lib"
version = "0.1.0"
authors = ["neandrake <die.drachen@gmail.com>"]
build = "build/build.rs"
edition = "2021"

[features]
compress = ["dep:libflate"]
stddicom = []
dimse = []

[dependencies]
encoding_rs = "0.8"
libflate = { version = "2.0", optional = true }
phf = "0.11"
thiserror = "1.0"

[build-dependencies]
dcmpipe_dict_builder = { path = "../dcmpipe_dict_builder", version = "0.1" }

[lib]
name="dcmpipe_lib"
path="src/lib.rs"
