[package]
name = "dcmpipe_lib"
version = "0.1.0"
authors = ["Christopher Speck <die.drachen@gmail.com>"]
description = "A library for reading and writing the DICOM format."
repository = "https://github.com/neandrake/dicom-pipe"
license = "Apache-2.0"
readme = "readme.md"
keywords = ["dicom", "dimse"]
categories = ["encoding", "parser-implementations", "science"]
build = "build/build.rs"
edition = "2021"

[features]
compress = ["dep:libflate"]
stddicom = ["dep:phf"]
dimse = ["stddicom"]

[dependencies]
encoding_rs = "0.8"
libflate = { version = "2.0", optional = true }
phf = { version = "0.11", optional = true }
thiserror = "1.0"

[dev-dependencies]
walkdir = "2.5"

[build-dependencies]
dcmpipe_dict_builder = { path = "../dcmpipe_dict_builder", version = "0.1" }

[lib]
name="dcmpipe_lib"
path="src/lib.rs"
