[package]
name = "dcmpipe_tests"
version = "0.1.0"
authors = ["neandrake <die.drachen@gmail.com>"]
edition = "2021"

[dependencies]
dcmpipe_lib = { path = "../dcmpipe_lib", version = "0.1", features = ["stddicom", "compress"] }
encoding_rs = "0.8"
walkdir = "2.4"

[lib]
name="dcmpipe_tests"
path="src/lib.rs"
