[package]
name = "dcmpipe"
version = "0.1.0"
authors = ["neandrake <die.drachen@gmail.com>"]
build = "build/build.rs"

[dependencies]
byteorder = "1"
encoding = "0.2"
phf = "0.7"
walkdir = "2.2"

[build-dependencies]
dcmpipe_dict = { path = "../dict", version = "0.1" }

[lib]
name="dcmpipe"
path="src/lib.rs"