[package]
name = "medicom_tools"
version = "0.1.0"
authors = ["Christopher Speck <cspeckrun@gmail.com>"]
description = "A collection of command-line tools for exploring DICOM, developed as examples for using the medicom crate."
repository = "https://github.com/neandrake/medicom/medicom_tools"
license = "Apache-2.0"
readme = "readme.md"
edition = "2021"

keywords = ["dicom"]
categories = ["command-line-utilities"]

[features]
index = ["dep:mongodb", "dep:bson"]
default = ["index"]

[dependencies]
anyhow = "1.0"
bson = { version = "2.13", optional = true }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
medicom = { path = "../medicom", version = "0.1", features = ["compress", "dimse", "stddicom"] }
image = "0.25"
mongodb = { version = "3.1", default-features = false, features = ["dns-resolver", "sync", "rustls-tls", "compat-3-0-0"], optional = true }
ratatui = "0.29"
walkdir = "2.5"
